syntax = "proto3";

package pb.payment_service;

option go_package = "pb/payment_service";

service PaymentService {
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
  rpc GetPaymentStatus (GetPaymentStatusRequest) returns (GetPaymentStatusResponse);
}

message PaymentMethod {
  int64 payment_method_id = 1;
  string name = 2;
  string bank_code = 3;
}

enum PaymentStatus {
    PAYMENT_STATUS_UNSPECIFIED = 0;
    PAYMENT_STATUS_PENDING = 1;
    PAYMENT_STATUS_SUCCESS = 2;
    PAYMENT_STATUS_FAILED = 3;
  }

message ProcessPaymentRequest {
  string order_id = 1;
  int64 user_id = 2;
  int64 payment_method_id= 3;
  PaymentStatus status = 4;
}

message ProcessPaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  int64 user_id = 3;
  int64 payment_method_id = 4;
  PaymentStatus status = 5;
  string transaction_id = 6;
}

message GetPaymentStatusRequest {
  string payment_id = 1;
}

message GetPaymentStatusResponse {
  string payment_id = 1;
  string order_id = 2;
  int64 user_id = 3;
  PaymentMethod payment_method = 4;
  PaymentStatus status = 5;
  string transaction_id = 6;
}

